# harmony_mpcs

./: .gitignore  README.md  pyproject.toml
examples/: dingo_example.py  generate_solver.py  mpc_example.py  pointrobot_example.py
examples/config/: pointrobot_config.yaml
harmony_mpcs/config/: config.py  config.yaml
harmony_mpcs/examples/: dingo_example.py  generate_solver.py
harmony_mpcs/examples/config/: dingo_config.yaml
harmony_mpcs/mpc_planner/: mpcDynObstPredictor.py  mpcPlanner.py  mpcPreprocessor.py
harmony_mpcs/mpc_solver_generation/: control_modules.py  dynamics.py  fixed_mpc_settings.py  fixed_mpc_solver.py  helpers.py  inequality.py  objective.py  pyproject.toml  sfm.py  solver_generator.py  solver_settings.py  solver_settings_interactive_mpc.py
harmony_mpcs/utils/: free_space_decomposition.py  social_forces_model.py  utils.py
