[tool.poetry]
name = "harmony-mpcs"
version = "0.1.0"
description = ""
authors = ["luzia <luzia.knoedler@web.de>"]
readme = "README.md"
packages = [{include = "harmony_mpcs"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
