[tool.poetry]
name = "harmony-mpcs"
version = "0.1.0"
description = ""
authors = ["luzia <luzia.knoedler@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8 <3.10"
nav_simulator = {path= "vendor/nav_simulator", develop=true}
casadi = "3.5.5"
scipy = "1.10.1"
requests = "^2.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
