[tool.poetry]
name = "python-solver-generation"
version = "0.1.0"
description = "generates forcespro solver"
authors = ["Luzia Knoedler <l.knoedler@tudelft.nl>"]
readme = "README.md"
packages = [{include = "python_solver_generation"}]

[tool.poetry.dependencies]
python = "^3.8"
casadi = "3.5.1"
urllib3 = "1.26.12"
setuptools = "44.0.0"
scipy = "1.4.1"
requests = "2.26.0"
idna = "3.4"
pip = "20.0.2"
numpy = "1.18.3"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
